tests/ui/deprecations.stderr
error: use of deprecated constant `pyo3::deprecations::PYMETHODS_NEW_DEPRECATED_FORM`: use `#[new]` instead of `#[__new__]`
  --> tests/ui/deprecations.rs:12:7
   |
12 |     #[__new__]
   |       ^^^^^^^
   |
note: the lint level is defined here
  --> tests/ui/deprecations.rs:1:9
   |
1  | #![deny(deprecated)]
   |         ^^^^^^^^^^

error: use of deprecated struct `pyo3::PyCell`: `PyCell` was merged into `Bound`, use that instead; see the migration guide for more info
  --> tests/ui/deprecations.rs:23:30
   |
23 |     fn method_gil_ref(_slf: &PyCell<Self>) {}
   |                              ^^^^^^

error: use of deprecated method `pyo3::deprecations::GilRefs::<T>::function_arg`: use `&Bound<'_, T>` instead for this function argument
  --> tests/ui/deprecations.rs:18:33
   |
18 |     fn cls_method_gil_ref(_cls: &PyType) {}
   |                                 ^

error: use of deprecated method `pyo3::deprecations::GilRefs::<T>::function_arg`: use `&Bound<'_, T>` instead for this function argument
  --> tests/ui/deprecations.rs:23:29
   |
23 |     fn method_gil_ref(_slf: &PyCell<Self>) {}
   |                             ^

error: use of deprecated method `pyo3::deprecations::GilRefs::<T>::function_arg`: use `&Bound<'_, T>` instead for this function argument
  --> tests/ui/deprecations.rs:28:36
   |
28 |     fn static_method_gil_ref(_any: &PyAny) {}
   |                                    ^

error: use of deprecated method `pyo3::deprecations::GilRefs::<T>::from_py_with_arg`: use `&Bound<'_, PyAny>` as the argument for this `from_py_with` extractor
  --> tests/ui/deprecations.rs:31:53
   |
31 |     fn set_foo_gil_ref(&self, #[pyo3(from_py_with = "extract_gil_ref")] _value: i32) {}
   |                                                     ^^^^^^^^^^^^^^^^^

error: use of deprecated method `pyo3::deprecations::GilRefs::<T>::function_arg`: use `&Bound<'_, T>` instead for this function argument
  --> tests/ui/deprecations.rs:47:43
   |
47 | fn pyfunction_with_module_gil_ref(module: &PyModule) -> PyResult<&str> {
   |                                           ^

error: use of deprecated method `pyo3::deprecations::GilRefs::<T>::function_arg`: use `&Bound<'_, T>` instead for this function argument
  --> tests/ui/deprecations.rs:57:19
   |
57 | fn module_gil_ref(m: &PyModule) -> PyResult<()> {
   |                   ^

error: use of deprecated method `pyo3::deprecations::GilRefs::<T>::function_arg`: use `&Bound<'_, T>` instead for this function argument
  --> tests/ui/deprecations.rs:63:57
   |
63 | fn module_gil_ref_with_explicit_py_arg(_py: Python<'_>, m: &PyModule) -> PyResult<()> {
   |                                                         ^

error: use of deprecated method `pyo3::deprecations::GilRefs::<T>::from_py_with_arg`: use `&Bound<'_, PyAny>` as the argument for this `from_py_with` extractor
  --> tests/ui/deprecations.rs:96:27
   |
96 |     #[pyo3(from_py_with = "extract_gil_ref")] _gil_ref: i32,
   |                           ^^^^^^^^^^^^^^^^^

error: use of deprecated method `pyo3::deprecations::GilRefs::<T>::function_arg`: use `&Bound<'_, T>` instead for this function argument
   --> tests/ui/deprecations.rs:102:29
    |
102 | fn pyfunction_gil_ref(_any: &PyAny) {}
    |                             ^

error: use of deprecated method `pyo3::deprecations::OptionGilRefs::<std::option::Option<T>>::function_arg`: use `Option<&Bound<'_, T>>` instead for this function argument
   --> tests/ui/deprecations.rs:105:36
    |
105 | fn pyfunction_option_gil_ref(_any: Option<&PyAny>) {}
    |                                    ^^^^^^

error: use of deprecated method `pyo3::deprecations::GilRefs::<T>::from_py_with_arg`: use `&Bound<'_, PyAny>` as the argument for this `from_py_with` extractor
   --> tests/ui/deprecations.rs:112:27
    |
112 |     #[pyo3(from_py_with = "PyAny::len", item("my_object"))]
    |                           ^^^^^^^^^^^^

error: use of deprecated method `pyo3::deprecations::GilRefs::<T>::from_py_with_arg`: use `&Bound<'_, PyAny>` as the argument for this `from_py_with` extractor
   --> tests/ui/deprecations.rs:122:27
    |
122 |     #[pyo3(from_py_with = "PyAny::len")] usize,
    |                           ^^^^^^^^^^^^

error: use of deprecated method `pyo3::deprecations::GilRefs::<T>::from_py_with_arg`: use `&Bound<'_, PyAny>` as the argument for this `from_py_with` extractor
   --> tests/ui/deprecations.rs:128:31
    |
128 |     Zip(#[pyo3(from_py_with = "extract_gil_ref")] i32),
    |                               ^^^^^^^^^^^^^^^^^

error: use of deprecated method `pyo3::deprecations::GilRefs::<T>::from_py_with_arg`: use `&Bound<'_, PyAny>` as the argument for this `from_py_with` extractor
   --> tests/ui/deprecations.rs:135:27
    |
135 |     #[pyo3(from_py_with = "extract_gil_ref")]
    |                           ^^^^^^^^^^^^^^^^^

error: use of deprecated method `pyo3::deprecations::GilRefs::<pyo3::Python<'_>>::is_python`: use `wrap_pyfunction_bound!` instead
   --> tests/ui/deprecations.rs:148:13
    |
148 |     let _ = wrap_pyfunction!(double, py);
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: this error originates in the macro `wrap_pyfunction` (in Nightly builds, run with -Z macro-backtrace for more info)
